--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "logfmt": "~0.20.0",
     "express": "~3.4.8",
-    "canvas": "~1.1.3"
+    "canvas": "~1.1.3",
+    "request": "*",
+    "twilio": "*"
   }
 }
